# news

./: .dockerignore  DESIGN_DOC.MD  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: dependencies.py  routes.py
app/clients/: ollama.py  searxng.py
app/core/: config.py
app/models/: schemas.py
app/services/: extractor.py  fetcher.py  pipeline.py  query_rewriter.py  ranker.py
app/testing/: spoof_api.py
docs/: DESIGN_DOC.MD
reader/: read.py
tests/: test_extraction.py  test_pipeline.py  test_query_rewrite.py  test_ranking.py  test_search_normalization.py
