[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-summarizer-backend"
version = "0.1.0"
description = "FastAPI backend for a news summarization pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "fastapi>=0.115.0,<1",
  "httpx>=0.27.0,<1",
  "pydantic>=2.8.2,<3",
  "pydantic-settings>=2.4.0,<3",
  "uvicorn[standard]>=0.30.6,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9",
  "pytest-asyncio>=0.24.0,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
